[workspace]
members = [
	"fixed-hash",
	"keccak-hash",
	"kvdb",
	"kvdb-memorydb",
	"kvdb-rocksdb",
	"kvdb-shared-tests",
	"parity-bytes",
	"rlp",
	"rlp-derive",
	"uint",
	"primitive-types",
	"bounded-collections",
	"ethereum-types",
	"ethbloom",
]

resolver = "2"

[patch.crates-io]
primitive-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }
ethereum-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }